--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
-  background-color: #0a0a0a;
+  background-color: #150F26;
   @apply text-white;
 }
 
