--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,12 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+.no-copy {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Standard syntax */
+}
